// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser.js > csvReader 1`] = `
{
  "data": [
    {
      "description": "Статический анализатор кода",
      "moved": "0",
      "name": "codeclimate",
      "quadrant": "tools",
      "ring": "Trial",
    },
    {
      "description": "",
      "moved": "",
      "name": "Nodejs",
      "quadrant": "Platforms",
      "ring": "Adopt",
    },
    {
      "description": "Статически, типизированный ЖС",
      "moved": "1",
      "name": "TypeScript",
      "quadrant": "language",
      "ring": "Adopt",
    },
    {
      "description": "Унификации контракта интерфейсов различных слоев приложений",
      "moved": "-1",
      "name": "Гексагональная архитектура",
      "quadrant": "Techniques",
      "ring": "Assess",
    },
  ],
  "meta": {
    "date": "2021-06-18",
    "legend": "bla bla bla",
    "title": "work it",
  },
  "quadrantAliases": {
    "language": "q1",
    "languages-and-frameworks": "q1",
    "platforms": "q2",
    "techniques": "q4",
    "tools": "q3",
  },
  "quadrantTitles": {
    "q1": "Languages and frameworks",
    "q2": "Platforms",
    "q3": "Tools",
    "q4": "Techniques",
  },
  "ringTitles": {},
  "sectorAliases": {},
  "sectorTitles": {},
}
`;

exports[`parser.js > jsonReader 1`] = `
{
  "data": [
    {
      "description": "Статически типизированный ЖС",
      "moved": "1",
      "name": "TypeScript",
      "quadrant": "languages-and-frameworks",
      "ring": "Adopt",
    },
    {
      "description": "",
      "moved": "",
      "name": "Nodejs",
      "quadrant": "Platforms",
      "ring": "Adopt",
    },
    {
      "description": "Статический анализатор кода",
      "moved": "0",
      "name": "codeclimate",
      "quadrant": "tools",
      "ring": "Trial",
    },
    {
      "description": "Унификации контракта интерфейсов различных слоев приложений",
      "moved": "-1",
      "name": "Гексагональная архитектура",
      "quadrant": "Techniques",
      "ring": "Assess",
    },
  ],
  "meta": {
    "date": "2021-06-12",
    "legend": "bla bla bla",
    "title": "tech radar js",
  },
  "quadrantAliases": {
    "languages-and-frameworks": "q1",
    "platforms": "q2",
    "techniques": "q4",
    "tools": "q3",
  },
  "quadrantTitles": {
    "q1": "Languages and frameworks",
    "q2": "Platforms",
    "q3": "Tools",
    "q4": "Techniques",
  },
}
`;

exports[`parser.js > parse() 1`] = `
{
  "_schema": "4x4",
  "data": [
    {
      "description": "",
      "moved": 0,
      "name": "Nodejs",
      "quadrant": "q2",
      "quadrantTitle": "Platforms",
      "ring": "adopt",
      "sector": "s2",
    },
    {
      "description": "Статически, типизированный ЖС",
      "moved": 1,
      "name": "TypeScript",
      "quadrant": "q1",
      "quadrantTitle": "Languages and frameworks",
      "ring": "adopt",
      "sector": "s1",
    },
    {
      "description": "Статический анализатор кода",
      "moved": 0,
      "name": "codeclimate",
      "quadrant": "q3",
      "quadrantTitle": "Tools",
      "ring": "trial",
      "sector": "s3",
    },
    {
      "description": "Унификации контракта интерфейсов различных слоев приложений",
      "moved": -1,
      "name": "Гексагональная архитектура",
      "quadrant": "q4",
      "quadrantTitle": "Techniques",
      "ring": "assess",
      "sector": "s4",
    },
  ],
  "meta": {
    "date": "2021-06-18",
    "legend": "bla bla bla",
    "title": "work it",
  },
  "quadrantAliases": {
    "language": "q1",
    "languages-and-frameworks": "q1",
    "platforms": "q2",
    "techniques": "q4",
    "tools": "q3",
  },
  "quadrantTitles": {
    "q1": "Languages and frameworks",
    "q2": "Platforms",
    "q3": "Tools",
    "q4": "Techniques",
  },
  "rings": [
    {
      "id": "adopt",
      "title": "Adopt",
    },
    {
      "id": "trial",
      "title": "Trial",
    },
    {
      "id": "assess",
      "title": "Assess",
    },
    {
      "id": "hold",
      "title": "Hold",
    },
  ],
  "sectors": [
    {
      "aliases": [
        "language",
        "languages-and-frameworks",
      ],
      "id": "s1",
      "title": "Languages and frameworks",
    },
    {
      "aliases": [
        "platforms",
      ],
      "id": "s2",
      "title": "Platforms",
    },
    {
      "aliases": [
        "tools",
      ],
      "id": "s3",
      "title": "Tools",
    },
    {
      "aliases": [
        "techniques",
      ],
      "id": "s4",
      "title": "Techniques",
    },
  ],
}
`;

exports[`parser.js > yamlReader 1`] = `
{
  "data": [
    {
      "description": "Статически типизированный ЖС",
      "moved": 1,
      "name": "TypeScript",
      "quadrant": "languages-and-frameworks",
      "ring": "Adopt",
    },
    {
      "description": null,
      "moved": null,
      "name": "Nodejs",
      "quadrant": "Platforms",
      "ring": "Adopt",
    },
    {
      "description": "Статический анализатор кода",
      "moved": 0,
      "name": "codeclimate",
      "quadrant": "tools",
      "ring": "Trial",
    },
    {
      "description": "Унификации контракта интерфейсов различных слоев приложений",
      "moved": -1,
      "name": "Гексагональная архитектура",
      "quadrant": "Techniques",
      "ring": "Assess",
    },
  ],
  "meta": {
    "date": "2021-06-11",
    "legend": "bla bla bla",
    "title": "tech radar js",
  },
  "quadrantAliases": {
    "languages-and-frameworks": "q1",
    "platforms": "q2",
    "techniques": "q4",
    "tools": "q3",
  },
  "quadrantTitles": {
    "q1": "Languages and frameworks",
    "q2": "Platforms",
    "q3": "Tools",
    "q4": "Techniques",
  },
}
`;
